# SubtitleGenius

./: .env.example  .gitignore  .gitmodules  DASH_SERVER_README.md  MILESTONE-VAD优化完成.md  MODULE_REFACTOR_SUMMARY.md  Makefile  PARAMETER_PASSING_SUMMARY.md  README.md  README_AUDIO_EXTRACTION.md  README_STREAMING_TRANSLATION.md  README_WHISPER_CONVERSE.md  VAC_Audio_Processing_Logic.md  VAD_INTEGRATION.md  analyze_vtt_timing.py  arabic_test_config.py  check_silero.py  conversation_history_audio_formats.md  create_arabic_test.py  create_flowchart.py  dash_server.py  debug_websocket_endpoint.py  demo_translation_module.py  download_arabic_video.py  enhanced_vad_integration.py  enhanced_vad_processor.py  example.py  example_streaming_arabic.py  example_whisper_converse.py  extract_audio.sh  gradio_app.py  gradio_simple.py  gradio_streaming_translation.py  image_detect.py  install_streaming.py  integration_example.py  launch.py  launch_streaming_translation.py  process_vtt_pipeline.py  pyproject.toml  (+49 more)
.amazonq/: mcp.json
.amazonq/instructions/: req.md
dash/: README.md  dash_server.py  dash_subtitle_pipeline.py  index.html  subtitle_generator.py  video_buffer.py
dash/dash_output/: index.html
docs/: TIMESTAMP_IMPLEMENTATION_SUCCESS.md  TIMESTAMP_PROCESSING.md  VAD时间戳膨胀问题分析.md  VTT_TIMING_ANALYSIS_REPORT.md  amazon_transcribe_guide.md  chinese_football_subtitle_analysis.md  ffmpeng_dash.md  metrics_implementation.md  model_comparison_analysis.md  subtitle_correction_analysis.md  timestamp_processing_ascii_flow.txt  timestamp_processing_flow.md  资料收集.md
examples/: metrics_example.py
frontend/: README.md  debug_websocket.html  package-lock.json  package.json  start.sh  start_dev_server.sh  test_params.html
frontend/public/: audioProcessor.js  index.html  manifest.json
frontend/src/: App.css  App.js  index.css
subtitle_genius/: __init__.py
subtitle_genius/audio/: __init__.py  processor.py  vad_processor.py
subtitle_genius/cli/: __init__.py  main.py
subtitle_genius/core/: __init__.py  config.py  generator.py  segment_processor.py  segment_processor_config.py
subtitle_genius/correction/: __init__.py  base.py  basic_corrector.py  bedrock_corrector.py  factory.py  llm_corrector.py  utils.py
subtitle_genius/metrics/: README.md  __init__.py  metrics_manager.py  vac_metrics.py
subtitle_genius/models/: __init__.py  base.py  claude_model.py  openai_model.py  transcribe_model.py  (+4 more)
subtitles/: chinese_football_auto.json  chunk_30_auto.json  duration_3_auto.json
test_arabic/: README.md  arabic_text.txt
tests/: test_correction_module.py  test_correction_service.py  test_subtitle_generator.py  test_subtitle_models.py  test_translation_module.py
vad_test_output/: chinese_90s_vad_analysis.md
(+29 files in other folders)
