[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtitle-genius"
version = "0.1.0"
description = "Real-time subtitle generation from MP4 live audio streams using GenAI"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # 音频处理
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.1",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    # 语音识别和AI
    "openai>=1.3.7",
    "anthropic>=0.7.8",
    "SpeechRecognition>=3.10.0",
    # 注意：暂时移除 openai-whisper 由于 Python 3.12 兼容性问题
    # "openai-whisper>=20231117",
    # AWS服务 (使用兼容版本)
    "boto3>=1.28.0,<1.35.0",
    "botocore>=1.31.0,<1.35.0",
    # 实时流处理 (使用兼容版本)
    "pyaudio>=0.2.11",
    "sounddevice>=0.4.6", # 麦克风录音
    "websockets>=10.0,<12.0",
    # AWS CRT (amazon-transcribe-streaming-sdk 依赖)
    "awscrt>=0.16.0",
    # 字幕处理
    "srt>=3.5.3",
    "webvtt-py>=0.4.6",
    # 视频处理
    "opencv-python>=4.8.1.78",
    "moviepy>=1.0.3",
    # 工具库
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    # 配置和序列化
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    # HTTP客户端
    "httpx>=0.25.2",
    "requests>=2.31.0",
    # Web界面 (使用稳定版本)
    "gradio>=5.0",
    "yt-dlp>=2025.6.30",
    "whisper>=1.1.10",
    # 注意：amazon-transcribe 现在通过子模块提供
    "aiofile>=3.9.0",
    "frozenlist>=1.7.0",
    "aiohttp>=3.12.13",
    "debugpy>=1.8.14",
    "matplotlib>=3.10.3",
    "silero-vad>=5.1.2",
    "faster-whisper>=1.1.1",
    "pypubsub>=4.0.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
subtitle-genius = "subtitle_genius.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]
